--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: calculator_app
-description: A simple calculator app displaying inputs and results.
+name: calcium
+description: Calcium Calculator
 
 version: 1.0.0+1
 
